# aragog

./: .gitignore  .readthedocs.yaml  README.md  interp_test.py  pylintrc  pyproject.toml  test_lookup.py  test_lookup_tables.py
.github/workflows/: publish.yaml  python-package.yml
aragog/: __init__.py  cli.py  core.py  data.py  interfaces.py  mesh.py  output.py  parser.py  phase.py  solver.py  test_lookup_tables.py  utilities.py
aragog/cfg/: abe_liquid.cfg  abe_mixed.cfg  abe_mixed_init.cfg  abe_mixed_lookup.cfg  abe_solid.cfg
data/1TPa-dK09-elec-free/entropy/: Translation_S_T.py
data/test/: Translation_S_T.py
docs/: about.rst  bibliography.rst  conf.py  index.rst  installation.rst  publications.rst  refs.bib  requirements.txt  troubleshooting.rst  tutorial.rst
docs/notes/: main.tex  refs.bib
docs/source/: aragog.rst  modules.rst  spider.rst
scripts/: convert_datatables.py
spider/: __init__.py  abe.py  bc.py  core.py  energy.py  interfaces.py  mesh.py  output.py  parser.py  phase.py  scalings.py  solver.py  utilities.py
tests/: conftest.py  test_abe.py  test_abe_1993.py  test_abe_solid.py  test_phase.py
tests/cfg/: abe.cfg  abe_1993.cfg  abe_liquid.cfg  abe_mixed.cfg  abe_mixed_lookup.cfg  abe_solid.cfg
tests/reference/: abe_liquid_no_heating.txt  abe_liquid_with_heating.txt  abe_solid_no_heating.txt  abe_solid_no_heating_old.txt  abe_solid_with_heating_old.txt
