[tool.poetry]
name = "aragog"
version = "0.1.0-alpha"
description = "A 1-D parameterised interior dynamics code for rocky or icy planets and moons with liquid and/or solid interiors"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
scipy = "^1.12.0"
thermochem = "^0.8.2"
matplotlib = "^3.8.3"
typed-configparser = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
sphinxcontrib-bibtex = "^2.6.2"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"