[tool.poetry]
name = "aragog"
version = "0.1.0-alpha"
description = "1-D interior dynamics of rocky or icy mantles that are solid or liquid"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "aragog" },
    { include = "notebooks", to = "aragog" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
scipy = "^1.12.0"
thermochem = "^0.8.2"
matplotlib = "^3.8.3"
typed-configparser = "^1.1.0"
typing-extensions = "^4.10.0"
sphinx = {version = "7.2.6", optional = true}
sphinx-rtd-theme = {version = "2.0.0", optional = true}
sphinxcontrib-bibtex = {version = "2.6.2", optional = true}
setuptools = {version = "69.2.0", optional = true}

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "setuptools"
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"