[tool.poetry]
name = "aragog"
version = "0.1.4-alpha"
description = "1-D interior dynamics of rocky mantles that are solid, liquid, or mixed phase"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "aragog" },
    { include = "notebooks", to = "aragog" },
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
netCDF4 = "^1.7.0"
thermochem = "^0.8.2"
matplotlib = "^3.8.3"
typed-configparser = "^1.1.0"
typing-extensions = "^4.10.0"
sphinx = {version = "7.2.6", optional = true}
sphinx-rtd-theme = {version = "2.0.0", optional = true}
sphinxcontrib-bibtex = {version = "2.6.3", optional = true}
setuptools = {version = "70.0.0", optional = true}
click = "^8.1.3"
platformdirs = "^3.10.0"
osfclient = "^0.0.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
    "setuptools"
]

[tool.poetry.scripts]
aragog = "aragog.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
